--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
-video{
-	 margin: 20px;
-	 float: left;
-	 margin-top: 20px;
-	 position: relative;
-	 Top: 0px;
-}
+video {
+    position: absolute;
+    top: 200px;
+    width: 100%;
+    text-align: center;
+    color: #fff;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+        }
