--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ video {
     position: absolute;
     top: 200px;
     width: 100%;
+    height: 700px;
     text-align: center;
     color: #fff;
     left: 0;
